@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.110 2010/05/31 10:50:02 stewy Exp $
+$Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -15,7 +15,9 @@ LibU 2.x.y
 	- [net] U_NET_OPT_DGRAM_BROADCAST to set DGRAM client socket broadcast 
 	  option
 	- [bst] new binary search tree module
-	- [bst] new module to encode/decode JSON objects (RFC 4627)
+	- [json] new module to encode/decode JSON objects (RFC 4627)
+	- [hmap] added u_hmap_count() to get the current number of objects stored
+	  into hmap
 
 LibU 2.0.0
 	- [pqueue] added new priority queue module
